# SWAP-SAMUCA

./: .gitignore  CMakeLists.txt  README.md  Readme4.0.txt
Cases_CNmodule/Maize(Cran16)/: CranMais.sme  CranMais.smm  CranMais.snp  CranMais.swp  PlotResult.R  runswap.cmd
Cases_CNmodule/Maize(Cran16)/InputData/Crops/: GmaizeD.crp
Cases_CNmodule/Maize(Cran16)/InputData/Drainage/: Cranend.dra
Cases_CNmodule/Maize(Cran16)/InputData/Weather/: 380_918.974  380_918.975  380_918.976  380_918.977  380_918.978  380_918.979  380_918.980  380_918.981  380_918.982
Cases_CNmodule/Maize(Cran16)/observed/: obs.Gwl.csv.txt  obs.leachNO3N.csv.txt  obs.yield.csv.txt  obs.yieldN.csv.txt
Cases_CNmodule/Soybean(Zavalla)/: DeleteOldResults.cmd  PlotResult.R  RunSwap.cmd  Swap_Arg.swp  Zavalla.sme  Zavalla.smm  Zavalla.snp
Cases_CNmodule/Soybean(Zavalla)/InputData/Crops/: Atmospheric.co2  soyD.crp
Cases_CNmodule/Soybean(Zavalla)/InputData/Drainage/: Pampas.dra
Cases_CNmodule/Soybean(Zavalla)/InputData/Weather/: Zavalla.000  Zavalla.001  Zavalla.002  Zavalla.003  Zavalla.004  Zavalla.005  Zavalla.006  Zavalla.007  Zavalla.008  Zavalla.009  Zavalla.010  Zavalla.011  Zavalla.012  Zavalla.013  Zavalla.014  Zavalla.989  Zavalla.990  Zavalla.991  Zavalla.992  Zavalla.993  Zavalla.994  Zavalla.995  Zavalla.996  Zavalla.997  Zavalla.998  Zavalla.999
Cases_CNmodule/Soybean(Zavalla)/observed/: obs.yield.csv.txt
cases/SAMUCA/: SEQ_F1_S2.012  SEQ_F1_S2.013  SEQ_F1_S2.014  SEQ_F1_S2.015  SEQ_F1_S2.016  Samuca.par  SamucaRDCTB.par  Sugarcane.crp  runtest_SWAP-SAMUCA.bat  swap.swp
cmake/Modules/: SetFortranFlags.cmake
lic/: License.txt
linux/: swap_samuca_v1
src_Swap4/: Functions_SAMUCA.f90  Output_samuca.f90  ReadFile_samuca.f90  ReadSamucaRDCTB.f90  SAMUCA.f90  TempHour_samuca.f90  astro_sam.f90  auto_irrig.f90  irrigation.f90  radiat.f90  rld.f90  root_growth_factor.f90  totass_samuca.f90  var_samuca.f90
xdata/: AdditionalData.txt
xdata/crops/detailed_arable/: GmaizeD.crp  PotatoD.crp  SbarleyD.crp  SbeetD.crp  SoybeanD.crp  WwheatD.crp
xdata/crops/detailed_grass/: GrassD.crp
xdata/crops/simpel/: BareSoil.crp  GrassS_mowing_grazing.crp  GrassSdry.crp  GrassSwet.crp  MaizeS.crp  NatureForestDecid.crp  NatureForestPine.crp  NatureForestSpruce.crp  NatureGrass.crp  NatureHeather.crp  Potatoes.crp  WheatS.crp
xdata/meteo/: 260.000  260.001  260.002  260.003  260.004  260.005  260.006  260.007  260.008  260.009  260.010  260.011  260.012  260.013  260.014  260.015  260.016  260.980  260.981  260.982  260.983  260.984  260.985  260.986  260.987  260.988  260.989  260.990  260.991  260.992  260.993  260.994  260.995  260.996  260.997  260.998  260.999  260_detail.000  260_detail.001  260_detail.002  (+34 more)
xdata/soils/StaringSeries1994/: staringreeks1994.csv
xdata/soils/bofek2012/MVG/: Bofek2012StaringreeksMVG.R  Bofek2012StaringreeksMVG.csv
xdata/soils/bofek2012/tables/: starb10_cm.csv  starb11_cm.csv  starb12_cm.csv  starb13_cm.csv  starb14_cm.csv  starb15_cm.csv  starb16_cm.csv  starb17_cm.csv  starb18_cm.csv  starb1_cm.csv  starb2_cm.csv  starb3_cm.csv  starb4_cm.csv  starb5_cm.csv  starb6_cm.csv  starb7_cm.csv  starb8_cm.csv  starb9_cm.csv  staro10_cm.csv  staro11_cm.csv  staro12_cm.csv  staro13_cm.csv  staro14_cm.csv  staro15_cm.csv  staro16_cm.csv  staro17_cm.csv  staro18_cm.csv  staro1_cm.csv  staro2_cm.csv  staro3_cm.csv  staro4_cm.csv  staro5_cm.csv  staro6_cm.csv  staro7_cm.csv  staro8_cm.csv  staro9_cm.csv
